# ml2prod

./: README.md
config1/: README.md  pyproject.toml
config1/src/: main.py
config1/src/model/: __init__.py
config1/tests/: test_config1.py
