[tool.poetry]
name = "config1"
version = "0.1.0"
description = ""
authors = ["Tanmay Garg <tanmay17061@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
numpy = "^1.25.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
